# just-text

./: .gitignore  README.md  idea.md
.github/workflows/: release.yml  windows-exe.yml
src/: ai.js  autocomplete.js  index.html  lineops.js  main.js  preview.js  spellcheck.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tests/: lineops.test.js
