[package]
name = "just-text"
version = "1.0.0"
description = "A lightweight cross-platform notepad"
authors = ["Just Text"]
edition = "2021"

# The library is what Tauri (and the mobile entry points) link against.
[lib]
name = "just_text_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
